# eos

plugins/: CMakeLists.txt
plugins/ledger_wallet_api_plugin/: CMakeLists.txt  ledger_wallet_api_plugin.cpp
plugins/ledger_wallet_api_plugin/include/eosio/ledger_wallet_api_plugin/: ledger_wallet_api_plugin.hpp
plugins/ledger_wallet_plugin/: CMakeLists.txt  hid.cpp  httpc.cpp  ledger_wallet_manager.cpp  ledger_wallet_plugin.cpp  simple_der_encoder.cpp
plugins/ledger_wallet_plugin/include/eosio/ledger_wallet_plugin/: hid.h  hid.hpp  httpc.hpp  ledger_wallet_manager.hpp  ledger_wallet_plugin.hpp  simple_der_encoder.hpp
programs/keosd/: CMakeLists.txt  main.cpp
